--- a/index.html
+++ b/index.html
@@ -36,6 +36,93 @@
         font-size: 16px;
         cursor: pointer;
       }
+      @media screen and (max-width: 500px) {
+        .game {
+          display: grid;
+          grid-template-columns: repeat(3, 60px);
+          grid-gap: 4px;
+          justify-content: center;
+          margin: 10px auto;
+        }
+        .cell {
+          width: 60px;
+          height: 60px;
+          border: 1px solid #333;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 15px;
+          cursor: pointer;
+        }
+        .cell img {
+          max-width: 50%;
+          max-height: 50%;
+        }
+        .reset {
+          margin-top: 10px;
+          padding: 5px 10px;
+          font-size: 10px;
+          cursor: pointer;
+        }
+      }
+      @media screen and ((min-width: 500px) and (max-width:700px)) {
+        .game {
+          display: grid;
+          grid-template-columns: repeat(3, 80px);
+          grid-gap: 4px;
+          justify-content: center;
+          margin: 15px auto;
+        }
+        .cell {
+          width: 80px;
+          height: 80px;
+          border: 1px solid #333;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 17px;
+          cursor: pointer;
+        }
+        .cell img {
+          max-width: 65%;
+          max-height: 65%;
+        }
+        .reset {
+          margin-top: 15px;
+          padding: 8px 13px;
+          font-size: 13px;
+          cursor: pointer;
+        }
+      }
+      @media screen and (max-width: 500px) {
+        .game {
+          display: grid;
+          grid-template-columns: repeat(3, 60px);
+          grid-gap: 4px;
+          justify-content: center;
+          margin: 10px auto;
+        }
+        .cell {
+          width: 60px;
+          height: 60px;
+          border: 1px solid #333;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 15px;
+          cursor: pointer;
+        }
+        .cell img {
+          max-width: 50%;
+          max-height: 50%;
+        }
+        .reset {
+          margin-top: 10px;
+          padding: 5px 10px;
+          font-size: 10px;
+          cursor: pointer;
+        }
+      }
     </style>
   </head>
   <body>
